WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114687
AX: VoiceOver says everything that isn't a link is a "clickable" in Safari reader?
https://bugs.webkit.org/show_bug.cgi?id=114687
Summary
AX: VoiceOver says everything that isn't a link is a "clickable" in Safari re...
chris fleizach
Reported
2013-04-16 09:33:52 PDT
VoiceOver is saying everything in Safari reader is clickable. That's because the AXPress action is exposed on all static text elements That's happening because on the <body> tag there's an on click handler I think the best course of action is not to expose AXPress for static text elements if the on click handler is on the body.
Attachments
patch
(7.33 KB, patch)
2013-04-16 09:40 PDT
,
chris fleizach
thorton
: review+
thorton
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2013-04-16 09:40:50 PDT
Created
attachment 198337
[details]
patch
Tim Horton
Comment 2
2013-04-17 09:24:34 PDT
Comment on
attachment 198337
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=198337&action=review
> Source/WebCore/accessibility/AccessibilityNodeObject.cpp:966 > + // It can cause false positives where every piece of text is labeled as accepting press actions when
this comment looks cut off.
Tim Horton
Comment 3
2013-04-17 09:32:27 PDT
Comment on
attachment 198337
[details]
patch But other than that it seems fine.
chris fleizach
Comment 4
2013-04-17 17:36:10 PDT
Thanks. Fixed the comment
http://trac.webkit.org/changeset/148652
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug